# scoutkick

./: .gitignore  .todos.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  check_db.py  check_team.py  koyeb.yaml  pyproject.toml  render.yaml  requirements.txt  scout.py
.github/workflows/: ci.yml
backend/: PRODUCTION_AUDIT.md  data_main.py  main.py  pyproject.toml  requirements.txt  run_all_seasons.py
backend/deploy/: render.yaml
backend/src/api/: cluster.py  data.py  deps.py  district.py  event.py  ftcscout_proxy.py  match.py  predict.py  router.py  schemas.py  season.py  site.py  team.py  utils.py
backend/src/core/: __init__.py  config.py  constants.py  math.py
backend/src/data/: __init__.py  cleaner.py  ftcscout_api.py  read_ftcscout.py
backend/src/services/: calibrate.py  clustering.py  complementarity.py  epa_service.py  init_epa.py  pipeline_service.py  test_2024_pipeline.py  trajectory.py
backend/src/storage/: __init__.py  base_storage.py  postgres_storage.py  sqlite_storage.py
backend/tests/: test_api.py  test_calibrate.py  test_cleaners.py  test_complementarity.py  test_engine.py  test_init_epa.py  test_integration.py  test_storage.py  test_trajectory.py  validate.py
llms/: llm-components.txt  llm-full.txt  llm-patterns.txt
package/src/scoutkick_api/: client.py
scoutkick/: Procfile  render.yaml
scoutkick-python/: README.md  pyproject.toml
scoutkick-python/src/scoutkick_api/: __init__.py  client.py
tests/: test_api.py  test_calibrate.py  test_cleaners.py  test_clustering.py  test_clusters.py  test_engine.py  test_smoke.py  test_storage.py  validate.py
