[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "scoutkick-api"
version = "0.1.0"
description = "Python client for the ScoutKick EPA rating system (FIRST Tech Challenge)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ftc", "first", "tech", "challenge", "epa", "scoutkick", "statbotics"]
authors = [{ name = "Cicchy" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://scoutkick.onrender.com"
Source = "https://github.com/Cicchy/scoutkick"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
